# cuda-samples

./: .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml
Common/: helper_nvJPEG.hxx  helper_string.h
cmake/toolchains/: toolchain-aarch64-linux.cmake
cpp/0_Introduction/UnifiedMemoryStreams/: CMakeLists.txt  README.md
cpp/0_Introduction/asyncAPI/: CMakeLists.txt
cpp/0_Introduction/clock/: CMakeLists.txt
cpp/0_Introduction/clock_nvrtc/: CMakeLists.txt
cpp/0_Introduction/cudaOpenMP/: CMakeLists.txt
cpp/0_Introduction/fp16ScalarProduct/: CMakeLists.txt  README.md  fp16ScalarProduct.cu
cpp/0_Introduction/matrixMul/: CMakeLists.txt
cpp/0_Introduction/matrixMulDrv/: CMakeLists.txt  matrixMulDrv.cpp
cpp/0_Introduction/matrixMulDynlinkJIT/: CMakeLists.txt  matrixMulDynlinkJIT.cpp
cpp/0_Introduction/matrixMul_nvrtc/: CMakeLists.txt
cpp/0_Introduction/mergeSort/: CMakeLists.txt
cpp/0_Introduction/simpleAWBarrier/: CMakeLists.txt  README.md
cpp/0_Introduction/simpleAssert/: CMakeLists.txt
cpp/0_Introduction/simpleAssert_nvrtc/: CMakeLists.txt
cpp/0_Introduction/simpleAtomicIntrinsics/: CMakeLists.txt
cpp/0_Introduction/simpleAtomicIntrinsics_nvrtc/: CMakeLists.txt
cpp/0_Introduction/simpleAttributes/: CMakeLists.txt
cpp/0_Introduction/simpleCUDA2GL/: CMakeLists.txt  README.md
cpp/0_Introduction/simpleCallback/: CMakeLists.txt
cpp/0_Introduction/simpleCooperativeGroups/: CMakeLists.txt
cpp/0_Introduction/simpleCubemapTexture/: CMakeLists.txt
cpp/0_Introduction/simpleDrvRuntime/: CMakeLists.txt
cpp/0_Introduction/simpleHyperQ/: CMakeLists.txt
cpp/0_Introduction/simpleIPC/: CMakeLists.txt  README.md
cpp/0_Introduction/simpleLayeredTexture/: CMakeLists.txt
cpp/0_Introduction/simpleMPI/: CMakeLists.txt  README.md
cpp/0_Introduction/simpleMultiCopy/: CMakeLists.txt
cpp/0_Introduction/simpleMultiGPU/: CMakeLists.txt
cpp/0_Introduction/simpleOccupancy/: CMakeLists.txt  simpleOccupancy.cu
cpp/0_Introduction/simpleP2P/: CMakeLists.txt
cpp/0_Introduction/simplePitchLinearTexture/: CMakeLists.txt
cpp/0_Introduction/simplePrintf/: CMakeLists.txt
cpp/0_Introduction/simpleStreams/: CMakeLists.txt
cpp/0_Introduction/simpleSurfaceWrite/: CMakeLists.txt
cpp/0_Introduction/simpleTemplates/: CMakeLists.txt
cpp/0_Introduction/simpleTexture/: CMakeLists.txt
cpp/0_Introduction/simpleTexture3D/: CMakeLists.txt  README.md
cpp/0_Introduction/simpleTextureDrv/: CMakeLists.txt  simpleTextureDrv.cpp
cpp/0_Introduction/simpleVoteIntrinsics/: CMakeLists.txt
cpp/0_Introduction/simpleZeroCopy/: CMakeLists.txt
cpp/0_Introduction/systemWideAtomics/: CMakeLists.txt  README.md  systemWideAtomics.cu
cpp/0_Introduction/template/: CMakeLists.txt
cpp/0_Introduction/vectorAdd/: CMakeLists.txt
cpp/0_Introduction/vectorAddDrv/: CMakeLists.txt  vectorAddDrv.cpp
cpp/0_Introduction/vectorAddMMAP/: CMakeLists.txt  vectorAddMMAP.cpp
cpp/0_Introduction/vectorAdd_nvrtc/: CMakeLists.txt
cpp/1_Utilities/deviceQuery/: CMakeLists.txt
cpp/1_Utilities/deviceQueryDrv/: CMakeLists.txt
cpp/1_Utilities/topologyQuery/: CMakeLists.txt
cpp/2_Concepts_and_Techniques/: README.md
cpp/2_Concepts_and_Techniques/EGLStream_CUDA_CrossGPU/: CMakeLists.txt
cpp/2_Concepts_and_Techniques/EGLStream_CUDA_Interop/: CMakeLists.txt
cpp/2_Concepts_and_Techniques/FunctionPointers/: CMakeLists.txt  README.md
cpp/2_Concepts_and_Techniques/MC_EstimatePiInlineP/: CMakeLists.txt
cpp/2_Concepts_and_Techniques/MC_EstimatePiInlineQ/: CMakeLists.txt
cpp/2_Concepts_and_Techniques/MC_EstimatePiP/: CMakeLists.txt
cpp/2_Concepts_and_Techniques/MC_EstimatePiQ/: CMakeLists.txt
cpp/2_Concepts_and_Techniques/MC_SingleAsianOptionP/: CMakeLists.txt
cpp/2_Concepts_and_Techniques/boxFilter/: CMakeLists.txt  README.md
cpp/2_Concepts_and_Techniques/convolutionSeparable/: CMakeLists.txt
cpp/2_Concepts_and_Techniques/convolutionTexture/: CMakeLists.txt
cpp/2_Concepts_and_Techniques/dct8x8/: CMakeLists.txt
cpp/2_Concepts_and_Techniques/eigenvalues/: CMakeLists.txt
cpp/2_Concepts_and_Techniques/histogram/: CMakeLists.txt
cpp/2_Concepts_and_Techniques/imageDenoising/: CMakeLists.txt  README.md
cpp/2_Concepts_and_Techniques/inlinePTX/: CMakeLists.txt
cpp/2_Concepts_and_Techniques/inlinePTX_nvrtc/: CMakeLists.txt
cpp/2_Concepts_and_Techniques/interval/: CMakeLists.txt
cpp/2_Concepts_and_Techniques/particles/: CMakeLists.txt  README.md  particleSystem_cuda.cu  particles_kernel_impl.cuh
cpp/2_Concepts_and_Techniques/radixSortThrust/: CMakeLists.txt
cpp/2_Concepts_and_Techniques/reduction/: CMakeLists.txt  README.md
cpp/2_Concepts_and_Techniques/reductionMultiBlockCG/: CMakeLists.txt  README.md
cpp/2_Concepts_and_Techniques/scalarProd/: CMakeLists.txt
cpp/2_Concepts_and_Techniques/scan/: CMakeLists.txt
cpp/2_Concepts_and_Techniques/segmentationTreeThrust/: CMakeLists.txt  segmentationTree.cu
cpp/2_Concepts_and_Techniques/shfl_scan/: CMakeLists.txt  README.md
cpp/2_Concepts_and_Techniques/sortingNetworks/: CMakeLists.txt
cpp/2_Concepts_and_Techniques/streamOrderedAllocation/: CMakeLists.txt
cpp/2_Concepts_and_Techniques/streamOrderedAllocationIPC/: CMakeLists.txt
cpp/2_Concepts_and_Techniques/streamOrderedAllocationP2P/: CMakeLists.txt
cpp/2_Concepts_and_Techniques/threadFenceReduction/: CMakeLists.txt
cpp/2_Concepts_and_Techniques/threadMigration/: CMakeLists.txt
cpp/3_CUDA_Features/StreamPriorities/: CMakeLists.txt
cpp/3_CUDA_Features/bf16TensorCoreGemm/: CMakeLists.txt  README.md
cpp/3_CUDA_Features/binaryPartitionCG/: CMakeLists.txt
cpp/3_CUDA_Features/bindlessTexture/: CMakeLists.txt  README.md
cpp/3_CUDA_Features/cdpAdvancedQuicksort/: CMakeLists.txt  README.md
cpp/3_CUDA_Features/cdpBezierTessellation/: CMakeLists.txt  README.md
cpp/4_CUDA_Libraries/: README.md
cpp/4_CUDA_Libraries/randomFog/: CMakeLists.txt  README.md
cpp/5_Domain_Specific/: README.md
cpp/7_libNVVM/: CMakeLists.txt
python/: requirements.txt
python/Utilities/: README.md  cuda_samples_utils.py
(+245 files in other folders)
